<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_game"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Button
        android:textColor="@android:color/white"
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8.0dip"
        android:text="@string/pause"
        android:layout_alignParentBottom="true"
        android:onClick="onPauseButton"
        android:layout_alignStart="@+id/recycler"
        android:backgroundTint="@color/colorPrimary" />
    <Button
        android:textColor="@android:color/white"
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:layout_alignTop="@id/pauseButton"
        android:layout_centerHorizontal="true"
        android:onClick="onMenuButton"
        android:backgroundTint="@color/colorPrimary" />
    <Button
        android:textColor="@android:color/white"
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:layout_alignTop="@id/menuButton"
        android:onClick="onRestartButton"
        android:layout_alignEnd="@id/recycler"
        android:backgroundTint="@color/colorPrimary" />
    <android.support.v7.widget.RecyclerView
        android:id="@id/recycler"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:overScrollMode="never" />
    <Chronometer
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:id="@+id/gameChrono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20.0dip"
        android:layout_above="@id/menuButton"
        android:layout_centerHorizontal="true" />
</RelativeLayout>